# boids_max

./: .gitignore  .gitmodules  CMakeLists.txt  package-info.json
extras/: boids overview.maxpat
help/: boids2d.maxhelp  boids3d.maxhelp  jit.boids2d.maxhelp  xray.jit.boidsrender.maxhelp
source/: max-sdk-pretarget.cmake
source/projects/boids2d/: Boids2d.c  CMakeLists.txt
source/projects/boids3d/: boids3d.c
source/projects/xray.jit.boidsrender/: CMakeLists.txt  xray.jit.boidsrender.c
